--- a/force-app/main/default/lwc/deleteMultiRowsAccs/deleteMultiRowsAccs.html
+++ b/force-app/main/default/lwc/deleteMultiRowsAccs/deleteMultiRowsAccs.html
@@ -16,7 +16,29 @@
         <lightning-button type="brand" label="Delete Acc's" onclick={handleDelAccRecords}>
 
         </lightning-button>
+
+        <lightning-button type="brand" label="Get Account Related Contacts" onclick={accRelContactBtnHandler}>
+
+        </lightning-button>
     </lightning-layout-item>
+
+  
+    <lightning-layout-item>
+        <div style="height: 300px;">
+            <lightning-datatable
+                    key-field="id"
+                   data={accConRecs}      
+                    columns={ContactCols}
+                    >    
+            </lightning-datatable>    <!--  {accRelatedContacts.data} -->
+        </div>
+    </lightning-layout-item>
+
+   
+
+    <!-- <lightning-layout-item> 
+        <c-delete-multi-rows-accs></c-delete-multi-rows-accs>
+    </lightning-layout-item> -->
 
    </lightning-card> 
 </template>
