--- a/force-app/main/default/lwc/wireToProperty/wireToProperty.html
+++ b/force-app/main/default/lwc/wireToProperty/wireToProperty.html
@@ -1,13 +1,41 @@
 <template>
    <lightning-layout>
-       
-<template for:each={accounts.data} for:item="acc" >
+      <lightning-layout-item>
+         <template for:each={accounts.data} for:item="acc">
 
-   <lightning-layout-item key={acc.key} padding="around-small">
-       <p>{acc.Id}</p>
-       <p>{acc.Name}</p>
-       <p><lightning-formatted-phone value={acc.Phone}></lightning-formatted-phone></p>
-   </lightning-layout-item>
-</template>
-</lightning-layout>
+            <lightning-layout-item key={acc.key} padding="around-small">
+               <p>{acc.Id}</p>
+               <p>{acc.Name}</p>
+               <p>
+                  <lightning-formatted-phone value={acc.Phone}></lightning-formatted-phone>
+               </p>
+            </lightning-layout-item>
+         </template>
+      </lightning-layout-item>
+
+
+
+      <lightning-layout-item>
+         <lightning-input label="search Accounts" value={accSearch}  onchange={inputHandle} placeholder="Enter Account name here">
+         </lightning-input>
+         <template for:each={accounts2.data} for:item="acc2">
+
+            <lightning-layout-item key={acc2.key} padding="around-small">
+
+               <p>{acc2.Id}</p>
+               <p>{acc2.Name}</p>
+               <p>
+                  <lightning-formatted-phone value={acc2.Phone}></lightning-formatted-phone>
+               </p>
+
+
+            </lightning-layout-item>
+
+         </template>
+
+         <!-- <lightning-button label="AccountSearch" type="brand" onclick={inputHandle}></lightning-button> -->
+      </lightning-layout-item>
+
+
+   </lightning-layout>
 </template>
